Fix small warnings pointed out by error-prone